--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 
 
 div {
-    background-color: red;
+    background-color: blue;
     color: white;
     font-size: 32px;
     text-align: center;
