--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 
 
 div {
-    background-color: blue;
+    background-color: red;
     color: white;
     font-size: 32px;
     text-align: center;
@@ -9,7 +9,3 @@ div {
     
 }
 
-`div`: 
-a red background, white text, 
-a font size of 32px, 
-center aligned, and bold
